[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labdataplot"
version = "0.1.0"
description = "A flexible Python library for reading and plotting data from laboratory measurement equipment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Luiz Carlos Gili", email = "luizcarlosgili@gmail.com"},
]
maintainers = [
    {name = "Luiz Carlos Gili", email = "luizcarlosgili@gmail.com"},
]
keywords = [
    "data-acquisition",
    "plotting",
    "laboratory",
    "measurement",
    "keysight",
    "dewesoft",
    "datalogger",
    "oscilloscope",
    "test-equipment",
    "excel",
    "matplotlib",
    "pandas",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "openpyxl>=3.1.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/labdataplot"
Documentation = "https://github.com/yourusername/labdataplot#readme"
Repository = "https://github.com/yourusername/labdataplot"
Issues = "https://github.com/yourusername/labdataplot/issues"
Changelog = "https://github.com/yourusername/labdataplot/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "/labdataplot",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["labdataplot"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=labdataplot --cov-report=term-missing"
